<resources>
    <string name="app_name">TrafficCDMForOperator</string>
    <string name="login">Login</string>
    <string name="hint_state">State</string>
    <string name="time_sequence">Time Sequence</string>
    <string name="submit_timestamp">Submit timestamp</string>
    <string name="log_out">Log out</string>
    <string name="submit">Submit</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="date_time_pattern">yyyy-MM-dd HH:mm</string>
    <string name="time_type">Time type</string>
    <string name="reference_object">Reference object</string>
    <string name="service">Service</string>
    <string name="submission_overview">Submission overview</string>
    <string name="submission_item_action_view">View</string>
    <string name="submission_item_action_copy">Copy</string>
    <string name="submission_item_action_undo">Undo</string>
    <string name="modify_message">Modify</string>
    <string name="undo_message">Undo</string>
    <string name="time_type_planned">Planned</string>
    <string name="time_type_estimated">Estimated</string>
    <string name="time_type_actual">Actual</string>
    <string name="cancel">Cancel</string>
    <string name="attribute">Attribute</string>
    <string name="object_in_concern">Object In Concern</string>
    <string name="grouping">Grouping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carrier">Carrier</string>
</resources>