<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".submission.AttributeStateFragment"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:labelFor="@id/edtTimeAttributeState"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutTimeAttributeState"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/calendar_icon">

        <AutoCompleteTextView
            android:id="@+id/edtTimeAttributeState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="@string/date_time_pattern"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_type"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@+id/radioGroupTimeTypeAttributeState"/>

    <RadioGroup
        android:id="@+id/radioGroupTimeTypeAttributeState"
        android:checkedButton="@+id/radioBtnAttributeStateActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioBtnAttributeStatePlanned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_planned"/>
        <RadioButton
            android:id="@+id/radioBtnAttributeStateEstimated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_estimated"/>
        <RadioButton
            android:id="@+id/radioBtnAttributeStateActual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_actual"/>
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/attribute"
        android:labelFor="@id/edtAttributeAttributeState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtAttributeAttributeState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_attribute_prefix"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/location"
        android:labelFor="@id/edtLocationAttributeState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtLocationAttributeState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_location_prefix_for_location_state"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_object"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@id/edtReferenceObjectAttributeState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtReferenceObjectAttributeState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_reference_object_prefix"
            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>