<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".submission.LocationStateFragment"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:labelFor="@id/edtTimeLocationState"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutTimeLocationState"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/calendar_icon">

        <AutoCompleteTextView
            android:id="@+id/edtTimeLocationState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="@string/date_time_pattern"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_type"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@+id/radioGroupTimeTypeLocationState"/>
    <RadioGroup
        android:id="@+id/radioGroupTimeTypeLocationState"
        android:checkedButton="@+id/radioBtnLocationStateActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioBtnLocationStatePlanned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_planned"/>
        <RadioButton
            android:id="@+id/radioBtnLocationStateEstimated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_estimated"/>
        <RadioButton
            android:id="@+id/radioBtnLocationStateActual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_actual"/>
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/location_type"
        android:labelFor="@id/edtLocationTypeLocationState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtLocationTypeLocationState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_location_prefix_for_location_state"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_object"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@id/edtReferenceObjectLocationState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtReferenceObjectLocationState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_reference_object_prefix"
            />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>