<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".submission.LocationStateFragment"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:labelFor="@id/edtTimeServiceState"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutTimeServiceState"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/calendar_icon">

        <AutoCompleteTextView
            android:id="@+id/edtTimeServiceState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="datetime"
            android:hint="@string/date_time_pattern"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_type"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@+id/radioGroupTimeTypeServiceState"/>
    <RadioGroup
        android:id="@+id/radioGroupTimeTypeServiceState"
        android:checkedButton="@+id/radioBtnLocationStateActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioBtnServiceStatePlanned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_planned"/>
        <RadioButton
            android:id="@+id/radioBtnServiceStateEstimated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_estimated"/>
        <RadioButton
            android:id="@+id/radioBtnServiceStateActual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_type_actual"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtServiceServiceState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_service_prefix"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="Location(optional)"
        android:labelFor="@id/edtLocationServiceState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtLocationServiceState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_object"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:labelFor="@id/edtReferenceObjectServiceState"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edtReferenceObjectServiceState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:simpleItems="@array/predefined_reference_object_prefix"
            />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
